Add server accout delete and pasword changes, and remove unsued classes
- Add user selectable option 'Delete account on server' when user remove an account; user must login to perform this action.
- While user is login, changing local password will also change password on the server.
- Revert deletion of AudioSilenceSystem, AudioSilenceCaptureDevice, AudioSilenceMediaDevice classes
- Upgrade smack library to version 4.4.7
- Reset and cleanup mysql database version and creation.

--- a/aTalk/build.gradle
+++ b/aTalk/build.gradle
@@ -55,7 +55,7 @@ configurations.all {
     it.resolutionStrategy {
         eachDependency { details ->
             // multiple actions can be specified
-            if (details.requested.group == "org.igniterealtime.smack" && ['smack-core', 'smack-experimental', 'smack-extensions', 'smack-omemo'].contains(details.requested.name)) {
+            if (details.requested.group == "org.igniterealtime.smack" && ['smack-experimental', 'smack-extensions', 'smack-omemo'].contains(details.requested.name)) {
                 //changing the name reference to smack libraries to its individual jar
                 // details.useTarget group: details.requested.group, name: "${details.requested.name}-jarjar", version: details.requested.version
                 details.useTarget group: details.requested.group, name: "${details.requested.name}-jarjar", version: details.requested.version
@@ -206,7 +206,7 @@ android {
 ext {
     // for official maven release
     // smackVersion = '4.5.0-alpha1'
-    smackVersion = '4.4.6'
+    smackVersion = '4.4.7'
 
     // May need manual cleanup for new SNAPSHOT update if same name with date change only:
     // ~\.gradle\caches\modules-2\files-2.1\org.igniterealtime.smack
