--- a/aTalk/release/version.properties
+++ b/aTalk/release/version.properties
@@ -1,4 +1,4 @@
-Date: Tue Nov 28 07:21:43 SGT 2023
+Date: Wed Dec 20 10:36:37 SGT 2023
 
-last_version=4.0.x
-last_version_code=400000
+last_version=0.1.0
+last_version_code=1000
