--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
     }
 
     dependencies {
+        // gradle-8.x requires JVM 17; aTalk max jvm is 15.
         classpath 'com.android.tools.build:gradle:7.4.2'
 
         // Required by android-youtube-player
