--- a/gradle.properties
+++ b/gradle.properties
@@ -17,8 +17,11 @@
 # https://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
-android.enableJetifier=true
+
 android.useAndroidX=true
+
+# Automatically convert third-party libraries to use AndroidX
+android.enableJetifier=true
 
 org.gradle.daemon=true
 org.gradle.jvmargs=-Xmx12480M
@@ -31,3 +34,6 @@ org.gradle.warning.mode=all
 android.nonFinalResIds=false
 # Gradle >=8.0.0: Allow transitive resource identifiers use in aTalk.
 android.nonTransitiveRClass=false
+
+# Fix AS abstract error???: https://issuetracker.google.com/issues/321988935
+# android.useFullClasspathForDexingTransform = true
