--- a/gradle.properties
+++ b/gradle.properties
@@ -35,5 +35,5 @@ android.nonFinalResIds=false
 # Gradle >=8.0.0: Allow transitive resource identifiers use in aTalk.
 android.nonTransitiveRClass=false
 
-# Fix AS abstract error???: https://issuetracker.google.com/issues/321988935
-# android.useFullClasspathForDexingTransform = true
+# Fix AS abstract error: https://issuetracker.google.com/issues/321988935
+android.useFullClasspathForDexingTransform = true
