--- a/entry/build.gradle
+++ b/entry/build.gradle
@@ -56,8 +56,8 @@ android {
         applicationId = 'org.atalk.ohos'
         archivesBaseName = 'aTalk'
 
-        versionCode 9000
-        versionName "00.09.000"
+        versionCode 9010
+        versionName "00.09.010"
 
         minSdkVersion rootProject.minSdk
         targetSdkVersion rootProject.compileSdk
@@ -201,7 +201,7 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.17.0'
 
-    implementation 'androidx.activity:activity-ktx:1.10.1'
+    implementation 'androidx.activity:activity-ktx:1.11.0'
     implementation 'androidx.appcompat:appcompat:1.7.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
     implementation 'androidx.fragment:fragment-ktx:1.8.9'
@@ -220,15 +220,15 @@ dependencies {
     }
     implementation 'com.karumi:dexter:6.2.3'
 
-    annotationProcessor 'com.github.bumptech.glide:compiler:5.0.4'
-    implementation 'com.github.bumptech.glide:glide:5.0.4'
+    annotationProcessor 'com.github.bumptech.glide:compiler:5.0.5'
+    implementation 'com.github.bumptech.glide:glide:5.0.5'
     implementation 'com.github.seancfoley:ipaddress:5.5.1'
     implementation 'com.github.evgenyneu:js-evaluator-for-android:v6.0.0'
 
     implementation 'com.github.yalantis:ucrop:2.2.10'
-    implementation 'com.google.android.material:material:1.12.0'
+    implementation 'com.google.android.material:material:1.13.0'
 
-    implementation 'com.googlecode.libphonenumber:libphonenumber:9.0.13'
+    implementation 'com.googlecode.libphonenumber:libphonenumber:9.0.14'
     implementation 'com.splitwise:tokenautocomplete:4.0.0-beta05'
     implementation 'com.squareup.okhttp3:okhttp:5.1.0' // 4.12.0'
 
@@ -508,7 +508,7 @@ task buildJniStaticLibs(type: Exec) {
  * The version.properties is retrieved during app update check to asses if there is a new update
  */
 task updateVersionFile(type: Copy) {
-    description = '<!-- Generate version.properties file -->'
+    def description = '<!-- Generate version.properties file -->'
 
     def versionName = android.defaultConfig.versionName
     def versionCode = android.defaultConfig.versionCode
